objects/User__x.object
<CustomObject>
    <fields>
        <fullName>UserPermissionsKnowledgeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsKnowledgeUser</externalDeveloperName>
        <label>Knowledge User</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsMarketingUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsMarketingUser</externalDeveloperName>
        <label>Marketing User</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsMobileUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsMobileUser</externalDeveloperName>
        <label>Apex Mobile User</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsOfflineUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsOfflineUser</externalDeveloperName>
        <label>Offline User</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsSFContentUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsSFContentUser</externalDeveloperName>
        <label>Salesforce CRM Content User</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsSupportUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsSupportUser</externalDeveloperName>
        <label>Service Cloud User</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesActivityRemindersPopup__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesActivityRemindersPopup</externalDeveloperName>
        <label>ActivityRemindersPopup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesApexPagesDeveloperMode__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesApexPagesDeveloperMode</externalDeveloperName>
        <label>ApexPagesDeveloperMode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesCacheDiagnostics__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesCacheDiagnostics</externalDeveloperName>
        <label>CacheDiagnostics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesCreateLEXAppsWTShown__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesCreateLEXAppsWTShown</externalDeveloperName>
        <label>CreateLEXAppsWTShown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisCommentAfterLikeEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisCommentAfterLikeEmail</externalDeveloperName>
        <label>DisCommentAfterLikeEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisMentionsCommentEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisMentionsCommentEmail</externalDeveloperName>
        <label>DisMentionsCommentEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisProfPostCommentEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisProfPostCommentEmail</externalDeveloperName>
        <label>DisProfPostCommentEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableAllFeedsEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableAllFeedsEmail</externalDeveloperName>
        <label>DisableAllFeedsEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableBookmarkEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableBookmarkEmail</externalDeveloperName>
        <label>DisableBookmarkEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableChangeCommentEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableChangeCommentEmail</externalDeveloperName>
        <label>DisableChangeCommentEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableEndorsementEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableEndorsementEmail</externalDeveloperName>
        <label>DisableEndorsementEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableFileShareNotificat__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableFileShareNotificationsForApi</externalDeveloperName>
        <label>DisableFileShareNotificationsForApi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableFollowersEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableFollowersEmail</externalDeveloperName>
        <label>DisableFollowersEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableLaterCommentEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableLaterCommentEmail</externalDeveloperName>
        <label>DisableLaterCommentEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableLikeEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableLikeEmail</externalDeveloperName>
        <label>DisableLikeEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableMentionsPostEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableMentionsPostEmail</externalDeveloperName>
        <label>DisableMentionsPostEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableMessageEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableMessageEmail</externalDeveloperName>
        <label>DisableMessageEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableProfilePostEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableProfilePostEmail</externalDeveloperName>
        <label>DisableProfilePostEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableSharePostEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableSharePostEmail</externalDeveloperName>
        <label>DisableSharePostEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesEnableAutoSubForFeeds__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesEnableAutoSubForFeeds</externalDeveloperName>
        <label>EnableAutoSubForFeeds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesEventRemindersCheckboxDef__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesEventRemindersCheckboxDefault</externalDeveloperName>
        <label>EventRemindersCheckboxDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesExcludeMailAppAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesExcludeMailAppAttachments</externalDeveloperName>
        <label>ExcludeMailAppAttachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesFavoritesShowTopFavorites__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesFavoritesShowTopFavorites</externalDeveloperName>
        <label>FavoritesShowTopFavorites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesFavoritesWTShown__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesFavoritesWTShown</externalDeveloperName>
        <label>FavoritesWTShown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesGlobalNavBarWTShown__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesGlobalNavBarWTShown</externalDeveloperName>
        <label>GlobalNavBarWTShown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesGlobalNavGridMenuWTShown__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesGlobalNavGridMenuWTShown</externalDeveloperName>
        <label>GlobalNavGridMenuWTShown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHasCelebrationBadge__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHasCelebrationBadge</externalDeveloperName>
        <label>HasCelebrationBadge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideBiggerPhotoCallout__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideBiggerPhotoCallout</externalDeveloperName>
        <label>HideBiggerPhotoCallout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideCSNDesktopTask__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideCSNDesktopTask</externalDeveloperName>
        <label>HideCSNDesktopTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideCSNGetChatterMobileTa__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideCSNGetChatterMobileTask</externalDeveloperName>
        <label>HideCSNGetChatterMobileTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideChatterOnboardingSpla__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideChatterOnboardingSplash</externalDeveloperName>
        <label>HideChatterOnboardingSplash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideEndUserOnboardingAssi__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideEndUserOnboardingAssistantModal</externalDeveloperName>
        <label>HideEndUserOnboardingAssistantModal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideLightningMigrationMod__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideLightningMigrationModal</externalDeveloperName>
        <label>HideLightningMigrationModal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideS1BrowserUI__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideS1BrowserUI</externalDeveloperName>
        <label>HideS1BrowserUI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideSecondChatterOnboardi__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideSecondChatterOnboardingSplash</externalDeveloperName>
        <label>HideSecondChatterOnboardingSplash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideSfxWelcomeMat__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideSfxWelcomeMat</externalDeveloperName>
        <label>HideSfxWelcomeMat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesLightningExperiencePrefer__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesLightningExperiencePreferred</externalDeveloperName>
        <label>LightningExperiencePreferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesPathAssistantCollapsed__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesPathAssistantCollapsed</externalDeveloperName>
        <label>PathAssistantCollapsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesPreviewCustomTheme__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesPreviewCustomTheme</externalDeveloperName>
        <label>PreviewCustomTheme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesPreviewLightning__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesPreviewLightning</externalDeveloperName>
        <label>PreviewLightning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesRecordHomeReservedWTShown__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesRecordHomeReservedWTShown</externalDeveloperName>
        <label>RecordHomeReservedWTShown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesRecordHomeSectionCollapse__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesRecordHomeSectionCollapseWTShown</externalDeveloperName>
        <label>RecordHomeSectionCollapseWTShown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesReminderSoundOff__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesReminderSoundOff</externalDeveloperName>
        <label>ReminderSoundOff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowCityToExternalUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowCityToExternalUsers</externalDeveloperName>
        <label>ShowCityToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowCityToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowCityToGuestUsers</externalDeveloperName>
        <label>ShowCityToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowCountryToExternalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowCountryToExternalUsers</externalDeveloperName>
        <label>ShowCountryToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowCountryToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowCountryToGuestUsers</externalDeveloperName>
        <label>ShowCountryToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowEmailToExternalUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowEmailToExternalUsers</externalDeveloperName>
        <label>ShowEmailToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowEmailToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowEmailToGuestUsers</externalDeveloperName>
        <label>ShowEmailToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowFaxToExternalUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowFaxToExternalUsers</externalDeveloperName>
        <label>ShowFaxToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowFaxToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowFaxToGuestUsers</externalDeveloperName>
        <label>ShowFaxToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowManagerToExternalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowManagerToExternalUsers</externalDeveloperName>
        <label>ShowManagerToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowManagerToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowManagerToGuestUsers</externalDeveloperName>
        <label>ShowManagerToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowMobilePhoneToExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowMobilePhoneToExternalUsers</externalDeveloperName>
        <label>ShowMobilePhoneToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowMobilePhoneToGuestUse__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowMobilePhoneToGuestUsers</externalDeveloperName>
        <label>ShowMobilePhoneToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowPostalCodeToExternalU__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowPostalCodeToExternalUsers</externalDeveloperName>
        <label>ShowPostalCodeToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowPostalCodeToGuestUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowPostalCodeToGuestUsers</externalDeveloperName>
        <label>ShowPostalCodeToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowProfilePicToGuestUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowProfilePicToGuestUsers</externalDeveloperName>
        <label>ShowProfilePicToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowStateToExternalUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowStateToExternalUsers</externalDeveloperName>
        <label>ShowStateToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowStateToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowStateToGuestUsers</externalDeveloperName>
        <label>ShowStateToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowStreetAddressToExtern__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowStreetAddressToExternalUsers</externalDeveloperName>
        <label>ShowStreetAddressToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowStreetAddressToGuestU__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowStreetAddressToGuestUsers</externalDeveloperName>
        <label>ShowStreetAddressToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowTitleToExternalUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowTitleToExternalUsers</externalDeveloperName>
        <label>ShowTitleToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowTitleToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowTitleToGuestUsers</externalDeveloperName>
        <label>ShowTitleToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowWorkPhoneToExternalUs__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowWorkPhoneToExternalUsers</externalDeveloperName>
        <label>ShowWorkPhoneToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowWorkPhoneToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowWorkPhoneToGuestUsers</externalDeveloperName>
        <label>ShowWorkPhoneToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesSortFeedByComment__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesSortFeedByComment</externalDeveloperName>
        <label>SortFeedByComment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesSuppressEventSFXReminders__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesSuppressEventSFXReminders</externalDeveloperName>
        <label>SuppressEventSFXReminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesSuppressTaskSFXReminders__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesSuppressTaskSFXReminders</externalDeveloperName>
        <label>SuppressTaskSFXReminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesTaskRemindersCheckboxDefa__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesTaskRemindersCheckboxDefault</externalDeveloperName>
        <label>TaskRemindersCheckboxDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserRoleId__c</fullName>
        <externalDeveloperName>UserRoleId</externalDeveloperName>
        <label>Role ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <externalDeveloperName>UserType</externalDeveloperName>
        <label>User Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>PowerPartner</fullName>
                    <label>Partner</label>
                </value>
                <value>
                    <fullName>PowerCustomerSuccess</fullName>
                    <label>Customer Portal Manager</label>
                </value>
                <value>
                    <fullName>CustomerSuccess</fullName>
                    <label>Customer Portal User</label>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
                <value>
                    <fullName>CspLitePortal</fullName>
                    <label>High Volume Portal</label>
                </value>
                <value>
                    <fullName>CsnOnly</fullName>
                    <label>CSN Only</label>
                </value>
                <value>
                    <fullName>SelfService</fullName>
                    <label>Self Service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Type_c__c</fullName>
        <externalDeveloperName>User_Type__c</externalDeveloperName>
        <label>User Type</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <externalDeveloperName>Username</externalDeveloperName>
        <label>Username</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx_Agent_AutoLogin_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>cnx__Agent_AutoLogin__c</externalDeveloperName>
        <label>Auto Login</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx_Agent_Extension_c__c</fullName>
        <externalDeveloperName>cnx__Agent_Extension__c</externalDeveloperName>
        <label>obsolete</label>
        <length>32</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx_Agent_ID_c__c</fullName>
        <externalDeveloperName>cnx__Agent_ID__c</externalDeveloperName>
        <label>Agent Id</label>
        <length>128</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx_Agent_MobileAgent_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>cnx__Agent_MobileAgent__c</externalDeveloperName>
        <label>Mobile Agent</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx_Agent_MobileMode_c__c</fullName>
        <externalDeveloperName>cnx__Agent_MobileMode__c</externalDeveloperName>
        <label>Mobile Agent Mode</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CALL_BY_CALL</fullName>
                </value>
                <value>
                    <fullName>NAILED_CONNECTION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx_Agent_MobileNumber_c__c</fullName>
        <externalDeveloperName>cnx__Agent_MobileNumber__c</externalDeveloperName>
        <label>Mobile Agent Dial Number</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnx_Agent_Password_c__c</fullName>
        <externalDeveloperName>cnx__Agent_Password__c</externalDeveloperName>
        <label>obsolete</label>
        <length>32</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx_Agent_Phone_Extension_c__c</fullName>
        <externalDeveloperName>cnx__Agent_Phone_Extension__c</externalDeveloperName>
        <label>Agent Extension</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnx_Agent_SpeedDialNumbers_c__c</fullName>
        <externalDeveloperName>cnx__Agent_SpeedDialNumbers__c</externalDeveloperName>
        <label>Speed Dial Numbers</label>
        <length>1060</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi_Can_View_Not_Assigned_Prospects_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>pi__Can_View_Not_Assigned_Prospects__c</externalDeveloperName>
        <label>Can View Not Assigned Prospects</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi_Pardot_Api_Version_c__c</fullName>
        <externalDeveloperName>pi__Pardot_Api_Version__c</externalDeveloperName>
        <label>Pardot Api Version</label>
        <length>1</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_Pardot_User_Role_c__c</fullName>
        <externalDeveloperName>pi__Pardot_User_Role__c</externalDeveloperName>
        <label>Pardot User Role</label>
        <length>100</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <label>User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Users</pluralLabel>
</CustomObject>